# geodepoly

./: .gitignore  .pre-commit-config.yaml  .zenodo.json  404.html  ABOUT.md  AI_Use_Cases_Six_Ways.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GAP_ANALYSIS.md  LICENSE  README.md  RELEASE_NOTES_v0.2.2.md  RELEASE_NOTES_v0.2.3.md  RELEASE_NOTES_v0.2.4.md  SECURITY.md  SPEC.md  SPEC_AI_GeodePoly.md  index.html  mkdocs.yml  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml  cli-smoke.yml  docs.yml  geodebench.yml  publish-testpypi.yml  publish.yml  wheels.yml
WIP/: TODO_IDE.md
ai_benchmarks/: index.html
ai_overview/: index.html
ai_use_cases/: index.html
api/: index.html
assets/: ai_bench.csv  bench_agg.csv
batched/: index.html
bench/: generate_slices.py  geodebench_spec.md
bench_presets/: index.html
benchmarks/: index.html
bridges/: geodepoly_cli.py
docs/: ai_benchmarks.md  ai_overview.md  ai_use_cases.md  api.md  batched.md  bench_presets.md  benchmarks.md  cubic_quintic.md  examples.md  faq.md  gallery.md  geode.md  geode_gpu_spec.md  geodebench.md  how_it_works.md  index.md  layerings.md  non_finance_adapters.md  paper_guide.md  performance.md  troubleshooting.md
docs/assets/: bench.csv  bench_agg.csv  edge_cases.csv  newton_aberth_hybrid.csv  newton_vs_hybrid.csv  newton_vs_hybrid_tuned.csv
examples/: compare_methods.py  eigs_demo.py  eisenstein_quintic_demo.py  geode_arrays_demo.py  hyper_catalan_demo.py  index.html  json_bridge_roundtrip.py  multiple_root_demo.py  quickstart.py  resummation_effect.py  sympy_examples.py  sympy_vs_nroots.py
examples/ai/: control_pole_placement.py  spectral_matching.py  torch_rootlayer_demo.py
faq/: index.html
gallery/: index.html
geode_gpu_spec/: index.html
geodebench/: index.html
geodepoly/: __init__.py  batched.py  batched_cli.py  bench_compare.py  bridge_cli.py  cli.py  eigs.py  finishers.py  formal.py  geode.py  geode_conv.py  geode_conv_jax.py  hyper_catalan.py  layerings.py  numeric.py  poly.py  resummation.py  series.py  series_core.py  series_solve.py  solver.py  sympy_plugin.py  util.py
geodepoly/adapters/: __init__.py
geodepoly/ai/: __init__.py  losses.py  rootlayer_jax.py  rootlayer_torch.py
geodepoly/scripts/: benchmark.py
how_it_works/: index.html
layerings/: index.html
notebooks/: AI_PolePlacement.ipynb  AI_Quickstart.ipynb  AI_SpectralMatching.ipynb  BenchSummary.ipynb  GeodeBench_Starter.ipynb  Quickstart.ipynb
paper/: GeodePoly_MVP.md
paper_guide/: index.html
performance/: index.html
scripts/: GAP_ANALYSIS_NON_FINANCE.md  baseline_transformer.py  bench_aberth_gpu.py  bench_aberth_jax.py  bench_ai_jax.py  bench_ai_torch.py  bench_batched.py  bench_compare.py  bench_gpu_prototype.py  bench_newton_vs_hybrid.py  bench_presets.py  benchmark.py  plot_ai_bench.py  plot_bench.py  profile_finishers.py
search/: search_index.json
site/: 404.html  index.html
site/api/: index.html
tests/: test_aberth.py  test_ai_jax.py  test_ai_torch.py  test_arrays.py  test_batched.py  test_bench_smoke.py  test_centering.py  test_cli_bridge_extras.py  test_cli_extras.py  test_cli_happy.py  test_cli_io.py  test_cli_more.py  test_conjugate_symmetry.py  test_eigs.py  test_eisenstein_bring.py  test_formal_errors.py  test_formal_extras.py  test_formal_more.py  test_geode_conv.py  test_geode_conv_jax.py  test_geode_factorization.py  test_geodebench_smoke.py  test_high_degrees.py  test_hyper_catalan.py  test_lagrange_reversion.py  test_layerings.py  test_multiple_roots.py  test_numeric_wrappers.py  test_poly_extras.py  test_polynomial.py  test_precision_matrix.py  test_properties.py  test_q_cubic_and_bootstrap.py  test_repro_precision.py  test_resummation.py  test_resummation_extras.py  test_series_basic.py  test_series_solve.py  test_series_solve_edges.py  test_series_solve_more.py  (+5 more)
troubleshooting/: index.html
(+14 files in other folders)
