[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geodepoly"
version = "0.1.4"
description = "Series-reversion polynomial solver with bootstrap and deflation"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Ric Fulop", email = "ricfulop@mit.edu" }]
requires-python = ">=3.9"
dependencies = []

[project.urls]
Homepage = "https://github.com/ricfulop/geodepoly"

[project.optional-dependencies]
dev = ["pytest", "numpy"]

[tool.setuptools]
packages = { find = { include = ["geodepoly*"], exclude = ["bridges*", "paper*", "scripts*", "tests*", "docs*", "examples*"] } }
