[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geodepoly"
version = "0.1.7.post1"
description = "Series-reversion polynomial solver with bootstrap and deflation"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Ric Fulop", email = "ricfulop@mit.edu" }]
requires-python = ">=3.9"
dependencies = []
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Mathematics",
]

[project.urls]
Homepage = "https://github.com/ricfulop/geodepoly"

[project.optional-dependencies]
dev = ["pytest", "numpy"]
plots = ["matplotlib"]
lint = ["ruff", "black", "mypy", "pytest-cov", "pre-commit"]

[tool.setuptools]
packages = { find = { include = ["geodepoly*"], exclude = ["bridges*", "paper*", "scripts*", "tests*", "docs*", "examples*"] } }

[project.scripts]
geodepoly-bench = "geodepoly.bench_compare:main"
