[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geodepoly"
version = "0.2.3"
description = "Series-reversion polynomial solver with bootstrap and deflation"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Ric Fulop", email = "ricfulop@mit.edu" }]
requires-python = ">=3.9"
dependencies = []
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Mathematics",
]

[project.urls]
Homepage = "https://github.com/ricfulop/geodepoly"

[project.optional-dependencies]
dev = ["pytest", "numpy", "pandas"]
plots = ["matplotlib"]
lint = ["ruff", "black", "mypy", "pytest-cov", "pre-commit"]
torch = ["torch"]
jax = ["jax", "jaxlib"]
sympy = ["sympy"]
numba = ["numba"]
ai-torch = ["torch>=2.2", "numpy"]
ai-jax = ["jax>=0.4.26", "jaxlib", "numpy"]
ai-all = ["geodepoly[ai-torch,ai-jax]", "matplotlib", "optax", "flax"]

[tool.setuptools]
packages = { find = { include = ["geodepoly*"], exclude = ["bridges*", "paper*", "scripts*", "tests*", "docs*", "examples*"] } }

[tool.setuptools.package-data]
geodepoly = ["py.typed"]

[tool.coverage.report]
omit = [
  "geodepoly/bench_compare.py",
  "geodepoly/batched.py",
  "geodepoly/sympy_plugin.py",
  "geodepoly/scripts/*",
  "geodepoly/util.py",
  "geodepoly/solver.py",
  "geodepoly/hyper_catalan.py",
]

[project.scripts]
geodepoly-bench = "geodepoly.bench_compare:main"
geodepoly-solve = "geodepoly.cli:main"
geodepoly-bridge = "geodepoly.bridge_cli:main"
geodepoly-gpu-batch = "geodepoly.batched_cli:main"
